Updates to docsify template

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,16 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <!-- Theme: Simple -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/docsify-themeable@0.9.0/dist/css/theme-simple.min.css"
+    />
   </head>
   <body>
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "Webworkshop",
+        name: "Canvas Course",
         repo: "lars-derichter/webworkshop-cursus",
         loadSidebar: true,
         subMaxLevel: 3,
@@ -36,15 +39,15 @@
       };
     </script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.13.0/docsify.min.js"
-      integrity="sha512-Qf5jm6dXW/In/Xgh12itTxddJYBkRVno1mWciQp3L4cQM9qlXj08kwuiOQsugbpZF32LRPhMueVZDHxNMVuGuw=="
+      src="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.13.1/docsify.min.js"
+      integrity="sha512-84+ZaJNTIDfzIpGj5whcwtNJwZhYW0PfowJCCVsCWxB9x1cLfpx960AuuP85vZAknEp5+B3/Ukg1x+kv+sP7ug=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/js/docsify-themeable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0.9.0/dist/js/docsify-themeable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
-    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <script src="https://unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
     <script src="https://unpkg.com/docsify-copy-code@2"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js"
