With mustache templates to adapt the docsify index

--- a/template/index.html.tmpl
+++ b/template/index.html.tmpl
@@ -19,8 +19,8 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "Canvas Course",
-        repo: "lars-derichter/webworkshop-cursus",
+        name: "{{course_name}}",
+        repo: "",
         loadSidebar: true,
         subMaxLevel: 3,
         auto2top: true,
